TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_before.dot
digraph AST {
  "138456927616640" [label="Start"];
  "138456927616640" -> "138456927606896";
  "138456927606896" [label="Code"];
  "138456927606896" -> "138456927603584";
  "138456927603584" [label="Function"];
  "138456927603584" -> "138456927615392";
  "138456927603584" -> "138456927604112";
  "138456927603584" -> "138456927616928";
  "138456927615392" [label="main"];
  "138456927604112" [label="Parameters"];
  "138456927616928" [label="Code"];
  "138456927616928" -> "138456927616352";
  "138456927616928" -> "138456927615344";
  "138456927616352" [label="Code"];
  "138456927616352" -> "138456927615968";
  "138456927615968" [label="Declaration"];
  "138456927615968" -> "138456927613808";
  "138456927615968" -> "138456927616496";
  "138456927613808" [label="x"];
  "138456927616496" [label="1"];
  "138456927615344" [label="Code"];
  "138456927615344" -> "138456927606848";
  "138456927606848" [label="Declaration"];
  "138456927606848" -> "138456927702032";
  "138456927606848" -> "138456927702896";
  "138456927702032" [label="x"];
  "138456927702896" [label="2"];
}
